--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 .mjx-dashed{stroke-dasharray:140}
 .mjx-dotted{stroke-linecap:round;stroke-dasharray:0,140}
 use[data-c]{stroke-width:3px}
-</style></head><body class="content"></body></html><html><head><meta property="og:title" content="URS"><meta property="og:description" content="Cohesive Type Theory"><meta property="og:url" content="https://urs.groupoid.space/"></head></html><title>URS</title><nav><a href='#'>URS</a></nav><article class="main"><div class="exe"><section><h1>SUPER TYPE SYSTEM</h1></section><aside><time>Published: 28 FEB 2025</time><p>We present Homotopical Supersmooth Differential Quantum Type Theory.
+</style></head><body class="content"></body></html><html><head><meta property="og:title" content="URS"><meta property="og:description" content="Cohesive Type Theory"><meta property="og:url" content="https://urs.groupoid.space/"></head></html><title>URS</title><nav><a href='#'>URS</a></nav><article class="main"><div class="exe"><section><h1>HOMOTOPY SUPER SMOOTH DIFFERENTIAL QUANTUM TYPE SYSTEM</h1></section><aside><time>Published: 28 FEB 2025</time><p>We present Homotopy Supersmooth Differential Quantum Type Theory.
 This system builds a progressive structure for formalizing mathematical and physical concepts,
 from homotopy and higher categorical structures,
 through geometric cohesion and differential properties,
