--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ this layered approach offers a modular,
 type-theoretic foundation for synthetic supergeometry and beyond.
 </p><p>Type theory has emerged as a powerful language for mathematics
 and physics, unifying computation, logic, and structure. This
-article introduces a three-layered type theory that extends
+article introduces a layered type theory that extends
 Martin-Löf’s intensional type theory into a framework capable
 of capturing homotopy, cohesion, and supergeometry:
 </p><p>1) Homotopy Type System: foundation for homotopical properties of spaces;
