--- a/foundations/path/index.html
+++ b/foundations/path/index.html
@@ -123,4 +123,4 @@ transport.
 Path between element would requested to be unique applying
 UIP at any Path level which is prohibited. UIP in HoTT
 is defined only as instance of n-groupoid, see the PROP type.
-</p></section></div></article><footer class="footer"><a href="https://5ht.co/license/"><img class="footer__logo" src="https://longchenpa.guru/seal.png" width="50"></a><span class="footer__copy">2021&mdash;2025 &copy; <a rel="me" href="https://mathstodon.xyz/@5ht" style="color:white;"><u>Максим Сохацький</u></a></span><script src="https://groupoid.space/highlight.js?v=1"></script><script src="https://groupoid.space/bundle.js"></script></footer>
+</p></section></div></article><footer class="footer"><a href="https://5ht.co/license/"><img class="footer__logo" src="https://longchenpa.guru/seal.png" width="50"></a><span class="footer__copy">2021&mdash;2025 &copy; <a rel="me" href="https://mathstodon.xyz/@5ht" style="color:white;"><u>Максим Сохацький</u></a></span></footer>
