--- a/foundations/spectra/index.html
+++ b/foundations/spectra/index.html
@@ -69,6 +69,6 @@ suspension.</p><p style="text-align:center;"><mjx-container class="MathJax" jax=
 [2]. Kenneth Brown. (1973). <a href="">Abstract Homotopy Theory and Generalized Sheaf Cohomology</a><br>
 [3]. M.A. Mandell, J.P. May S. Schwede, B. Shipley. (1999). <a href="https://www.math.uchicago.edu/~may/PAPERS/mmssLMSDec30.pdf">Model Categories of Diagram Spectra</a><br>
 [4]. Stefan Schwede. (2012). <a href="https://www.math.uni-bonn.de/~schwede/SymSpec-v3.pdf">Symmetric spectra</a><br>
-[5]. Maximilien Holmberg-Péroux. EFPL (2014). <a href="An Introduction to Stable Homotopy Theory">https://homepages.math.uic.edu/~mholmb2/stable.pdf</a><br>
+[5]. Maximilien Holmberg-Péroux. EFPL (2014). <a href="https://homepages.math.uic.edu/~mholmb2/stable.pdf">An Introduction to Stable Homotopy Theory</a><br>
 [6]. Mitchell Riley. (2022). <a href="https://digitalcollections.wesleyan.edu/_flysystem/fedora/2023-03/22132-Original%20File.pdf">A Bunched Homotopy Type Theory for Synthetic Stable Homotopy Theory</a><br>
 </p></section></div></article><footer class="footer"><a href="https://5ht.co/license/"><img class="footer__logo" src="https://longchenpa.guru/seal.png" width="50"></a><span class="footer__copy">2021&mdash;2025 &copy; <a rel="me" href="https://mathstodon.xyz/@5ht" style="color:white;"><u>Максим Сохацький</u></a></span></footer>
